--- a/Java/inflearn_스프링 웹 MVC/item-service/src/main/resources/static/html/editForm.html
+++ b/Java/inflearn_스프링 웹 MVC/item-service/src/main/resources/static/html/editForm.html
@@ -21,7 +21,7 @@
     </div>
     <div>
       <label for="itemName">상품명</label>
-      <input type="text" id="itemName" name="itemName" class="formcontrol" value="상품A">
+      <input type="text" id="itemName" name="itemName" class="form-control" value="상품A">
     </div>
     <div>
       <label for="price">가격</label>
@@ -30,7 +30,7 @@
     </div>
     <div>
       <label for="quantity">수량</label>
-      <input type="text" id="quantity" name="quantity" class="formcontrol" value="10">
+      <input type="text" id="quantity" name="quantity" class="form-control" value="10">
     </div> <hr class="my-4">
     <div class="row">
       <div class="col">
